# hpe-core

./: .gitignore  .gitmodules  README.md  _BACKUP_91071.gitignore  _LOCAL_91071.gitignore  evaluation.sh  visulization.sh
core/: .gitignore  CMakeLists.txt  README.md
core/detection_wrappers/: detection.cpp  detection.h  openpose_detector.cpp  openpose_detector.h
core/event_representations/: representations.cpp  representations.h
core/event_volumes/: volumes.cpp  volumes.h
core/fusion/: fusion.cpp  fusion.h
core/hpecorepy/: README.md
core/meTest/: meTest.cpp
core/motion_estimation/: jointMotionEstimator.cpp  jointMotionEstimator.h  motion.cpp  motion.h  motion_estimation.cpp  motion_estimation.h  refactor.txt  reprojection.cpp  reprojection.h  saevel.cpp  saevel.h
core/utility/: test.cpp  utility.h
core/utility/e2vid/: e2vid.cpp  e2vid.h
core/utility/e2vid/python/: e2vid.py  e2vid_config.py  run_e2vid.py
datasets/: README.md  e2vid_iterator.py  tos_utils.py  yarp_to_eros.py
datasets/dhp19/: README.md  exportYarp.py  export_eros.py  export_eventframe.py  export_gt_to_numpy.py  export_to_tos.py  export_to_yarp.py  preprocess.m  preprocess_all.m
datasets/dhp19/e2vid/: Dockerfile  run_e2vid.py
datasets/dhp19/utils/: __init__.py  constants.py  parsing.py
datasets/h36m/: README.MD  Run_v2e_on_h36m.py  event_distribution.py  exportYarp.py  export_eros.py  export_eventframe.py  export_pim.py  export_spike_clips.py  export_to_tos.py  export_to_yarp.py  h36_h5_to_yarp.py
datasets/h36m/utils/: parsing.py
datasets/mpii/: README.md  export_to_eros.py  export_to_movenet.py  export_to_tos.py  export_to_yarp.py  mpii_to_events.py  mpii_to_movenet_anno_fix.py
datasets/mpii/utils/: parsing.py
datasets/utils/: constants.py  events_representation.py  export.py  genYarpImages.py  mat_files.py  parsing.py
datasets/vicon_processing/: .gitignore  notes.md  progress.md  vicon_processing.md
datasets/vicon_processing/notebooks/: delay_optim.ipynb  estimation_test_manual.ipynb  estimation_with_markers.ipynb  eventrate_test.ipynb  generate_video.ipynb  label_dvs.ipynb  project_video.ipynb  stats.ipynb  sythetic_test.ipynb  traj_analysis.ipynb
datasets/vicon_processing/scripts/: customloadevents.py  debug_projection.py  delay_optimise.py  export_cdf.py  export_yarp.py  extract_frame.py  extrinsic.npy  extrinsic_calibrate.py  generate_video.py  label_dvs.py  manual_calib.py  save_dvs_frames.py  side_labels.yml
datasets/vicon_processing/src/: data_helpers.py  projection.py  utils.py  vis_utils.py
datasets/vicon_processing/v2/: Dockerfile  README.md  RGB_helpers.py  calibration.py  docker-compose.yaml  evcam_RGB.ipynb  evcam_vicon_calib.ipynb  evcam_vicon_calib.py  helpers.py  process.py  pyproject.toml
evaluation/: .gitignore  OP_EVALUATION.md  README.md  evaluate_hpe.py  evaluate_openpose.py  evaluate_vel.py  evaluation_1.sh  evaluation_individual_joints.py  example_evaluation.py  genYarpImages.py  plot_circle.py  runtime_gnn_test.py  test_eval.py  test_single_joint.py  velocity_study.py
evaluation/convert_DHP19/: exportYarp.py  load_dhp19.py  preprocess.m  preprocess_all.m
evaluation/convert_DHP19/functions/: filterAndSeparateChannels.m  preprocess.asv  saveCams.m
evaluation/dhp19/: Dockerfile  create_grayscale_frames.sh  evaluate_openpose.py  exportYarp.py  export_gt_poses.py  load_dhp19.py  preprocess.m  preprocess_all.m  run_e2vid.py
evaluation/dhp19/e2vid/: Dockerfile  README.md  create_grayscale_frames.sh  run_e2vid.py
evaluation/dhp19/utils/: __init__.py  mat_files.py  parsing.py
evaluation/h36m/: Run_v2e_on_h36m.py  exportYarp.py  h36_h5_to_yarp.py
evaluation/matlab/generate_DHP19/: ExtractEventsToFramesAndMeanLabels.m  Generate_DHP19.asv  Generate_DHP19.m
evaluation/python/: load_dhp19.py
evaluation/unittests/: hpe_metrics_tests.py
evaluation/utils/: __init__.py  evaluation_individual_joints.py  hpe_metrics.py  metrics.py  parsing.py  plots.py  visualise_hpe.py  visualization_hpe.py
example/: README.md
example/joint_tracking_example/: CMakeLists.txt  full13.cpp  joint-tracking.xml  joint_tracking_example.cpp  past_surface.cpp  plot_output.py  plot_output_2.py  roiq.cpp  roiq.h
example/meTest/: CMakeLists.txt
example/meTest/src/: meTest.cpp  meTest.h
example/movenet/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_cpu  README.md  bottle_output_example_temp.py  config.py  eros-framer.cpp  evaluate.py  moveEnet-offline.py  movenet_inference.py  movenet_online.py  predict.py  requirements.txt  yarpmanagerapplication.xml
example/movenet/data/dhp19-samples/: poses.json
example/movenet/lib/data/: data.py  data_tools.py
example/movenet/lib/loss/: movenet_loss.py
example/movenet/lib/task/: task.py  task_tools.py
example/movenet/lib/utils/: utils.py
example/op_detector_example_module/: CMakeLists.txt  CMakeLists_old.txt  Dockerfile  Dockerfile_essential  README.md  app_op_detector_example_module.xml  e2vid.cpp  e2vid_example_module.py  e2vid_framer.cpp  op_detector_example_module.cpp  op_detector_example_module.ini  python_cpp_test.cpp  python_cpp_test_old.cpp  yarpapp_demo.xml
example/op_detector_example_module/conf/: yarpapp_demo.xml  yarpapp_demo_atis.xml
example/op_detector_example_module/e2vid/: e2vid.py  image_reconstructor.py
example/op_detector_example_module/shell_scripts/: launch_yarp.sh  launch_yarpview.sh
example/op_detector_example_module/wrappers/: e2vid.h
example/reprojection_test/: CMakeLists.txt  test.cpp
example/test_dataset/: README.MD
example/test_dataset/dhp19_eros/: poses.json
example/volume_compensation/: CMakeLists.txt  example_volumecomp.cpp  plot_velocity.py  visualisation.h
example/yarp-example/: CMakeLists.txt  Readme.md
example/yarp-example/src/: yarp-example.cpp  yarp-example.h
example/yarp-glhpe/: .gitignore  CMakeLists.txt  Dockerfile  README.md  Readme.md  app_yarp-glhpe.xml  evaluate.py  glhpe-framer.cpp  run-model.py  test_eval_glhpe.py
pycore/moveenet/: __init__.py  config.py
pycore/movenet_rgb/: constants.py  funcs.py  run_movenet.py
(+41 files in other folders)
